--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap');
+*{
+  font-family: 'IBM Plex Mono', monospace;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +19,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.gradient-text {
+  background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(to right, #ffffff, rgb(38, 19, 59),  #030303);
+}
+.typing-floating-heading {
+  position: relative;
+  overflow: hidden;
+  border-right: 10px solid #333;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.05em;
+  animation: typingAnimation 3.5s steps(40, end), floatAnimation 2s ease-in-out infinite alternate;
+}
+
+@keyframes typingAnimation {
+  from {
+      width: 0;
+  }
+  to {
+      width: 100%;
+  }
+}
+
+@keyframes floatAnimation {
+  0% {
+      transform: translateY(0);
+  }
+  100% {
+      transform: translateY(-10px); /* Adjust this value for the desired floating effect */
+  }
+}
+
+.gradient-div {
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to right, #472747, #c761dc);
+}
+
+.min-h-screen {
+  perspective: 1px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.bg-image {
+  height: 100vh;
+  transform-style: preserve-3d;
+  transform: translateZ(-2px) scale(1);
+  will-change: transform;
+}
+
+
